--- a/myproject/templates/base.html
+++ b/myproject/templates/base.html
@@ -16,6 +16,7 @@
       <div class="span">
         <span><a href="{%url 'alltrainee'%}">All Trainee</a></span>
         <span><a href="{%url 'alltracks'%}">All Track</a></span>
+        <span><a href="{%url 'allinstructor'%}">All Instructor</a></span>
       </div>
     </div>
     <div>
